--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "eVent Project",
   "main": "app.js",
   "scripts": {
-    "start": "node .",
-    "build": "nodemon ."
+    "start": "nodemon -L"
   },
   "author": "",
   "license": "ISC",
