package json nodemon -L

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "eVent Project",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon -L"
   },
   "author": "",
   "license": "ISC",
